# llama.cpp_tcl

./: .gitignore  .gitmodules  CMakeLists.txt  CONVERSATION_MODE_FIX.md  CPPTCL_USAGE.md  INSTALL.md  INSTALL_STATUS.md  QUICKSTART.md  README.md  demo.tcl  demo_tk.tcl  install.sh  install_system.sh  libcpptcl.dylib  libllama_tcl.dylib  llama-tcl.pc.in  llama_tcl_wrapper.cpp  test_llama_tcl.tcl
